Fix crows fed message, Add token to translatable text for number of crows fed

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -1,5 +1,6 @@
 {
   "config-logging": "Logging",
   "config-logging.tooltip": "Toggles console logging.",
-  "config-enabled": "Enabled"
+  "config-enabled": "Enabled",
+  "crows-fed": "Total crows fed: {{crowsFedNumber}}"
 }
